| Summary: | ASTERISK-27016: Crash occurs when a channel in a 'mixing,dtmf_events' bridge is muted multiple times. | ||
| Reporter: | Chris Howard (choward) | Labels: | |
| Date Opened: | 2017-05-25 13:01:58 | Date Closed: | 2017-07-17 07:24:47 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Core/Bridging |
| Versions: | 13.15.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Linux localhost.localdomain 3.10.0-514.el7.x86_64 #1 SMP Tue Nov 22 16:42:41 UTC 2016 x86_64 x86_64 x86_64 GNU/Linux CentOS Linux release 7.3.1611 (Core) | Attachments: | ( 0) backtrace.txt ( 1) extensions.conf ( 2) mutecrash.js |
| Description: | This is actually 13.15.1 but it wasn't in the list.
Using ARI. 1. Channel enters stasis application. 2. On StasisStart a 'mixing,dtmf_events bridge is created and the channel is added to the bridge. 3. When a key is pressed a ChannelDtmfReceived event is receive from the channel ari.channels.mute is called on the channel. 4. Repeat key press over and over so that ari.channels.mute is called repeatedly. 5. Error messages in the asterisk CLI start to appear "ERROR[4268][C-00000001]: astobj2.c:131 INTERNAL_OBJ: FRACK!, Failed assertion bad magic number 0x7f25 for object 0x7f2584000970" 6. Eventually Asterisk crashes Included is a node-ari-client script that will cause the issue pretty quickly. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2017-05-25 13:01:59.352-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Chris Howard (choward) 2017-05-25 13:08:19.723-0500 This is the node-ari-client fine that you can use to cause the crash. | ||